started building (header & main)try2

--- a/html/home.html
+++ b/html/home.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
-
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../CSS/home.css">
 
@@ -30,7 +29,7 @@
         </header>
         <section>
             <Article class="teaser">
-                <img src="../Images/01_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
+                <img src="../Images/home/01_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Gspändli finden</h2>
                     <p class="teaserTextRechts">Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf
@@ -51,18 +50,18 @@
                         </p>
                         <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
                     </div>
-                    <img src="../Images/09_Bild.jpeg" alt="platzhalter" class="teaserimage">
+                    <img src="../Images/home/09_Bild.jpeg" alt="platzhalter" class="teaserimage">
                 </div>
             </article>
 
             <h3>z'zwoite machts eifach meh Spass</h3>
 
             <article class="teaser">
-                <Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png" class="largeimage">
+                <Img src="../Images/Home/Smartphone mit Köpfen_Bärnläbt.png" class="largeimage">
             </article>
 
             <Article class="teaser">
-                <img src="../Images/10_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
+                <img src="../Images/home/10_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Event erstöue</h2>
                     <p class="teaserTextRechts">Aus BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und
@@ -81,7 +80,7 @@
                         </p>
                         <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
                     </div>
-                    <img src="../Images/15_Bild.png" alt="platzhalter" class="teaserimage">
+                    <img src="../Images/home/15_Bild.png" alt="platzhalter" class="teaserimage">
                 </div>
             </article>
 
@@ -143,24 +142,25 @@
 
         <section class="boxRezensionen">
             <article class="userRezension">
-                <img src="../Images/15_Bild.png" alt="Bild User" class="portraitRezensionen">
+                <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Name</p>
                 <p class="textRezensionen">rezension</p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit 2023</p>
             </article>
             <article class="userRezension">
-                <img src="../Images/15_Bild.png" alt="Bild User" class="portraitRezensionen">
+                <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Name</p>
                 <p class="textRezensionen">rezension</p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit 2023</p>
             </article>
             <article class="userRezension">
-                <img src="../Images/15_Bild.png" alt="Bild User" class="portraitRezensionen">
+                <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Name</p>
                 <p class="textRezensionen">rezension</p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit 2023</p>
             </article>
         </section>
+
         <footer>
             <section class="footerTextContainer" id="footerColumn1">
                 <p class="footerTitel">BÄRNLÄBT GmbH</p>
@@ -189,12 +189,13 @@
             </section>
 
             <section class="footerLogosContainer " id="footerColumn4">
-                <img src="../Images/Logo.png" alt="platzhalter" class="footerSoMe">
-                <img src="../Images/Logo.png" alt="platzhalter" class="footerSoMe">
-                <img src="../Images/Logo.png" alt="platzhalter" class="footerSoMe">
-            </section>
+                <img src="../Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
+                <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
+                <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
+                <img src="../Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
 
             </section>
+
         </footer>
 
         <div class="footerLogoContainer">
