KLeine Korrekturen auf der Angebots Page.

--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -81,12 +81,14 @@
             <h3>«e Verein fäggt, imfau!»</h3>
             <article>
                 <p class="paragraphTitel">Entdecke deinen Verein.</p>
-                <p class="paragraphText">Check auch unsere Liste mit Vereinen aus. Egal, ob du für etwas Neues brennst oder einfach mal reinschnuppern willst: Hier wirst du fündig.</p>
-<p class="paragraphText">Finde deine neue Lieblingsbeschäftigung und knüpfe Kontakte. Die nächste grosse Leidenschaft wartet schon auf dich. </p>
-<a href="home.html" class="button">alle Vereine</a> 
+                <p class="paragraphText">Check auch unsere Liste mit Vereinen aus. Egal, ob du für etwas Neues brennst
+                    oder einfach mal reinschnuppern willst: Hier wirst du fündig.</p>
+                <p class="paragraphText">Finde deine neue Lieblingsbeschäftigung und knüpfe Kontakte. Die nächste grosse
+                    Leidenschaft wartet schon auf dich. </p>
+
 
             </article>
-
+            <a href="home.html" class="button">alle Vereine</a>
             <a class="button"> Impressum </a>
         </section>
 
