--- a/html/home.html
+++ b/html/home.html
@@ -14,6 +14,12 @@
 <body>
     <main>
         <header>
+            <div class="toolbar">
+                <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons">
+                <img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            </div>
             <img src="../Images/Logo.png" alt="logo Bärnläbt" class="logoHome">
             <h1>wöus zäme meh fäggt! </h1>
 
@@ -29,7 +35,8 @@
         </header>
         <section>
             <Article class="teaser">
-                <img src="../Images/home/01_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
+                <img src="../Images/home/01_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander"
+                    class="teaserimage">
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Gspändli finden</h2>
                     <p class="teaserTextRechts">Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf
@@ -61,7 +68,8 @@
             </article>
 
             <Article class="teaser">
-                <img src="../Images/home/10_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
+                <img src="../Images/home/10_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander"
+                    class="teaserimage">
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Event erstöue</h2>
                     <p class="teaserTextRechts">Aus BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und
