changed html and css über uns

--- a/html/über uns.html
+++ b/html/über uns.html
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/main.css">
-    <link rel="stylesheet" href="../https://use.typekit.net/qvo7bqu.css">
     <link rel="stylesheet" href="../CSS/über uns.css">
 </head>
 
 <body>
-    <main>
-        <header>
-            <img src="../Images/Logo klein.png" alt="logo klein Bärnläbt" class="logoÜberuns">
-            
-            <div class="menu-container">
-                <a href="home.html" class="button">Home</a>
-                <a href="angebot.html" class="button">Angebot</a>
-                <a href="über uns.html" class="buttonActive">Über uns</a>
-                <a href="kontakt.html" class="button">Kontakt</a>
-                <a href="impressum.html" class="button">Impressum</a>
+
+    <header>
+        <div class="headerIcons">
+
+            <div>
+                <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIconSetting">
+                <img src="../Images/Icons/Home.png" alt="Home" class="headerIconHome">
             </div>
-        </header>
-
-    <section>
-<article class="Salut">
-    <div class="horizontal">
-        <div class="teaserBoxLinks">
-            <h2 class="teaserTextLinks">Salut</h2>
-            <p class="teaserTextLinks">Du hast bereits viel von dir preisgegeben, daher möchten wir dir nun auch ein wenig von uns erzählen.
-                Nur so ist das doch fair, oder?
-            </p>
+            <div>
+                <img src="../Images/Icons/Herz.png" alt="Like" class="headerIconLike">
+                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIconProfil">
+            </div>
         </div>
-</article>
+        <img src="../Images/Logo klein.png" alt="logo klein Bärnläbt" class="logoÜberuns">
 
-<article class="">
-    <div class="horizontal">
-        <div class="teaserBoxRechts">
-            <p>Wir sind junge und lebhafte Menschen 
-                – so wie Du. 
-                Wir wissen genau, wie es sich anfühlt, 
-                in eine neue Stadt zu ziehen
-                 – womöglich genau wie Du.</p>
+        <div class="menu-container">
+            <div class="button-container">
+                <a href="home.html" class="buttontest">Home</a>
+            </div>
+            <div class="button-container">
+                <a href="angebot.html" class="buttontest">Angebot</a>
+            </div>
+            <div class="button-container">
+                <a href="über uns.html" class="buttonActive2">Über uns</a>
+            </div>
+            <div class="button-container">
+                <a href="kontakt.html" class="buttontest">Kontakt</a>
+            </div>
         </div>
-    </div>
-</article>
+    </header>
 
-    </section>
+    <main>
+        <section>
+            <article class="Salut">
+                <div class="horizontal">
+                    <div class="teaserBoxLinks">
+                        <h2 class="teaserTextLinks">Salut</h2>
+                        <p class="teaserTextLinks">Du hast bereits viel von dir preisgegeben, daher möchten wir dir nun
+                            auch ein wenig von uns erzählen.
+                            Nur so ist das doch fair, oder?
+                        </p>
+                    </div>
+            </article>
+
+            <article class="Salut">
+                <div class="horizontal">
+                    <div class="teaserBoxRechts">
+                        <p class="teaserTextRechts">Wir sind junge und lebhafte Menschen – so wie Du.
+                            Wir wissen genau, wie es sich anfühlt, in eine neue Stadt zu ziehen
+                            – womöglich genau wie Du.</p>
+                    </div>
+                </div>
+            </article>
+
+        </section>
     </main>
 </body>
+
 </html>
