--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
-    <link rel="stylesheet" href="../CSS/Angebot.css">
+    <link rel="stylesheet" href="../CSS/angebot.css">
 </head>
 
 
