--- a/html/ueberuns.html
+++ b/html/ueberuns.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/main.css">
-    <link rel="stylesheet" href="../CSS/über uns.css">
+    <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
+
+    <link rel="stylesheet" href="../CSS/ueberuns.css">
 </head>
 
 <body>
