Toolbar mit Icons feflickt.

--- a/html/home.html
+++ b/html/home.html
@@ -40,8 +40,7 @@
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Gspändli finden</h2>
                     <p class="teaserTextRechts">Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf
-                        Events
-                        und Aktivitäten?
+                        Events und Aktivitäten?
                         Dann finde jetzt Anlässe und Gleichgesinnte!
                     </p> <a href="angebot.html" class="button" class="teaserTextRechts">Los gehts</a>
                 </div>
