--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -14,6 +14,15 @@
 <body>
     <main>
         <header>
+
+            <section class="toolbar">
+                <div class="toolbarLeft">
+                <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons"></div>
+                <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons"></div>
+            </section>
+
             <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
 
             <div class="menu-container">
@@ -28,8 +37,7 @@
         </header>
         <section class="sectionCalendar">
             <article class="datumswahl">
-                <p class="datumPfeile">
-                    < </p>
+                <p class="datumPfeile"> < </p>
                         <p class="datum">Heute</p>
                         <p class="datumPfeile">></p>
             </article>
