started with media querries and tried tofix some stuff with the body and its margins.

--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -27,13 +27,10 @@
 
             <div class="menu-container">
                 <a href="home.html" class="button">Home</a>
-                <a href="angebot.html" class="buttonActive">Angebot</a>
-                <a href="über uns.html" class="button">Über uns</a>
+                <a href="angebot.html" class="button" id="buttonActive">Angebot</a>
+                <a href="ueberuns.html" class="button">Über uns</a>
                 <a href="kontakt.html" class="button">Kontakt</a>
-                <a href="impressum.html" class="button">Impressum</a>
             </div>
-
-            <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
         </header>
         <section class="sectionCalendar">
             <article class="datumswahl">
