--- a/html/home.html
+++ b/html/home.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-    <main>
         <header>
             <section class="toolbar">
                 <div class="toolbarLeft">
@@ -25,11 +24,10 @@
             <h1>wöus zäme meh fäggt! </h1>
 
             <section class="menu-container">
-                <a href="home.html" class="buttonActive">Home</a>
+                <a href="home.html" class="button" id="buttonActive">Home</a>
                 <a href="angebot.html" class="button">Angebot</a>
                 <a href="über uns.html" class="button">Über uns</a>
                 <a href="kontakt.html" class="button">Kontakt</a>
-                <a href="impressum.html" class="button">Impressum</a>
             </section>
 
             <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
@@ -88,13 +86,8 @@
                         <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
                     </div>
                     <img src="../Images/home/15_Bild.png" alt="platzhalter" class="teaserimage">
-            
             </article>
-
-
         </section>
-
-
         <Section class="eventliste">
             <h2>Aktuelle Events</h2>
 
@@ -162,14 +155,14 @@
                     </p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit August 2023</p>
             </article>
-            <article class="userRezension">
+            <article class="userRezension" id="rezensionTobias">
                 <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Tobias, 21</p>
                 <p class="textRezensionen">«BÄRNLÄBT hilft mir, mein soziales Umfeld in Bern zu erweitern. Die Möglichkeit Veranstaltungen zu finden und sich mit anderen zu verbinden, ist einzigartig»</p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit Juni 2023</p>
             </article>
         </section>
-    </main>
+
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
             <p class="footerTitel">BÄRNLÄBT GmbH</p>
@@ -197,7 +190,7 @@
 
         </section>
 
-        <section class="footerLogosContainer " id="footerColumn4">
+        <section class="footerSoMeContainer " id="footerColumn4">
             <img src="../Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
             <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
             <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
