--- a/html/impressum.html
+++ b/html/impressum.html
@@ -12,37 +12,102 @@
 
 
 <body>
-    <a href="http://127.0.0.1:5500/html/home.html" class="image-link" target="_blank">
-        <img src="Images/Logo klein.png" alt="logo_klein" class="image">
-    </a>
-    <h1>Impressum</h1>
+    <header>
+
+        <section class="toolbar">
+            <div class="toolbarLeft">
+                <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons">
+            </div>
+            <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            </div>
+        </section>
+
+        <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
+
+        <div class="menu-container">
+            <a href="home.html" class="button">Home</a>
+            <a href="angebot.html" class="button">Angebot</a>
+            <a href="ueberuns.html" class="button">Über uns</a>
+            <a href="kontakt.html" class="button">Kontakt</a>
+        </div>
+    </header>
     <div class="flexbox">
-        <p id="container">
-        <h2>Kontaktadresse</h2>
-        <p>BÄRNLÄBT GmbH, Holzikofenweg 8, 3000 Bern, Schweiz</p>
-        <h2>Haftungsausschluss</h2>
-        <p>Der Autor übernimmt keinerlei Gewähr hinsichtlich der inhaltlichen Richtigkeit, Genauigkeit, Aktualität,
-            Zuverlässigkeit und Vollständigkeit der Informationen. Haftungsansprüche gegen den Autor wegen Schäden
-            materieller oder immaterieller Art, welche aus dem Zugriff oder der Nutzung bzw. Nichtnutzung der
-            veröffentlichten Informationen, durch Missbrauch der Verbindung oder durch technische Störungen entstanden
-            sind, werden ausgeschlossen. Alle Angebote sind unverbindlich. Der Autor behält es sich ausdrücklich vor,
-            Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen
-            oder die Veröffentlichung zeitweise oder endgültig einzustellen. Haftung für Links Verweise und Links auf
-            Webseiten Dritter liegen ausserhalb unseres Verantwortungsbereichs. Es wird jegliche Verantwortung für
-            solche Webseiten abgelehnt. Der Zugriff und die Nutzung solcher Webseiten erfolgen auf eigene Gefahr des
-            Nutzers oder der Nutzerin.</p>
-        <h2>Urheberrechte</h2>
-        <p>Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen Dateien auf der Website gehören
-            ausschliesslich der Firma BÄRNLÄBT GmbH oder den speziell genannten Rechtsinhabern. Für die Reproduktion
-            jeglicher Elemente ist die schriftliche Zustimmung der Urheberrechtsträger im Voraus einzuholen.</p>
-        <h2>Datenschutz</h2>
-        <p>Gestützt auf Artikel 13 der schweizerischen Bundesverfassung und die datenschutzrechtlichen Bestimmungen des
-            Bundes (Datenschutzgesetz, DSG) hat jede Person Anspruch auf Schutz ihrer Privatsphäre sowie auf Schutz vor
-            Missbrauch ihrer persönlichen Daten. Wir halten diese Bestimmungen ein. Persönliche Daten werden streng
-            vertraulich behandelt und weder an Dritte verkauft noch weiter gegeben. In enger Zusammenarbeit mit unseren
-            Hosting-Providern bemühen wir uns, die Datenbanken so gut wie möglich vor fremden Zugriffen, Verlusten,
-            Missbrauch oder vor Fälschung zu schützen.</p>
-        </p>
+        <h1 class="pageTitle">Impressum</h1>
+        <section id="container">
+            <h2>Kontaktadresse</h2>
+            <p>BÄRNLÄBT GmbH, Holzikofenweg 8, 3000 Bern, Schweiz</p>
+            <h2>Haftungsausschluss</h2>
+            <p>Der Autor übernimmt keinerlei Gewähr hinsichtlich der inhaltlichen Richtigkeit, Genauigkeit, Aktualität,
+                Zuverlässigkeit und Vollständigkeit der Informationen. Haftungsansprüche gegen den Autor wegen Schäden
+                materieller oder immaterieller Art, welche aus dem Zugriff oder der Nutzung bzw. Nichtnutzung der
+                veröffentlichten Informationen, durch Missbrauch der Verbindung oder durch technische Störungen
+                entstanden
+                sind, werden ausgeschlossen. Alle Angebote sind unverbindlich. Der Autor behält es sich ausdrücklich
+                vor,
+                Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu
+                löschen
+                oder die Veröffentlichung zeitweise oder endgültig einzustellen. Haftung für Links Verweise und Links
+                auf
+                Webseiten Dritter liegen ausserhalb unseres Verantwortungsbereichs. Es wird jegliche Verantwortung für
+                solche Webseiten abgelehnt. Der Zugriff und die Nutzung solcher Webseiten erfolgen auf eigene Gefahr des
+                Nutzers oder der Nutzerin.</p>
+            <h2>Urheberrechte</h2>
+            <p>Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen Dateien auf der Website
+                gehören
+                ausschliesslich der Firma BÄRNLÄBT GmbH oder den speziell genannten Rechtsinhabern. Für die Reproduktion
+                jeglicher Elemente ist die schriftliche Zustimmung der Urheberrechtsträger im Voraus einzuholen.</p>
+            <h2>Datenschutz</h2>
+            <p>Gestützt auf Artikel 13 der schweizerischen Bundesverfassung und die datenschutzrechtlichen Bestimmungen
+                des
+                Bundes (Datenschutzgesetz, DSG) hat jede Person Anspruch auf Schutz ihrer Privatsphäre sowie auf Schutz
+                vor
+                Missbrauch ihrer persönlichen Daten. Wir halten diese Bestimmungen ein. Persönliche Daten werden streng
+                vertraulich behandelt und weder an Dritte verkauft noch weiter gegeben. In enger Zusammenarbeit mit
+                unseren
+                Hosting-Providern bemühen wir uns, die Datenbanken so gut wie möglich vor fremden Zugriffen, Verlusten,
+                Missbrauch oder vor Fälschung zu schützen.</p>
+        </section>
+    </div>
+    <footer>
+        <section class="footerTextContainer" id="footerColumn1">
+            <p class="footerTitel">BÄRNLÄBT GmbH</p>
+            <p class="footerText">Holzikofenweg 8</p>
+            <p class="footerText">3000 Bern</p>
+            <p></p>
+            <p class="footerTitel">Kontakt</p>
+            <p class="footerText">info@baernlaebt.ch</p>
+            <p class="footerText">+41 31 333 31 01</p>
+
+        </section>
+        <section class="footerTextContainer" id="footerColumn2">
+            <p class="footerTitel">Öffnungszeiten</p>
+            <p class="footerText">Mo-Do:</p>
+            <p class="footerText">8:00 bis 11:45 Uhr</p>
+            <p class="footerText">13:00 bis 17:00 Uhr</p>
+            <p class="footerText">Fr: bis 16:00 Uhr</p>
+        </section>
+        <section class="footerTextContainer" id="footerColumn3">
+            <a href="home.html" class="footerText">Home</a>
+            <a href="angebot.html" class="footerText">Angebot</a>
+            <a href="über uns.html" class="footerText">Über uns</a>
+            <a href="kontakt.html" class="footerText">Kontakt</a>
+            <a href="impressum.html" class="footerText">Impressum</a>
+
+        </section>
+
+        <section class="footerSoMeContainer " id="footerColumn4">
+            <img src="../Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
+            <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
+            <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
+            <img src="../Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+
+        </section>
+
+    </footer>
+
+
 
 </body>
 
