--- a/html/ueberuns.html
+++ b/html/ueberuns.html
@@ -65,9 +65,148 @@
                     </div>
                 </div>
             </article>
+        </section>
 
+        <section>
+            <article>
+                <div>
+                    <h2>Janic</h2>
+                    <p>Operations/ Kundendienst/ externe Kommunikation</p>
+                    <p>«Excel und PowerPoint Fanboy aber sonst eigentlich ganz okay.»</p>
+                </div>
+            </article>
+
+            <article>
+                <div>
+                    <h2>Jazz</h2>
+                    <p>Personalunternehmen/ Interne Kommunikation</p>
+                    <p>«Ich wurde von zwei gegensätzlichen Kulturen geprägt: die australische Leidenschaft für Pubs und Vokuhilas; sowie die schweizerische Begeisterung für Struktur und Wandern. Bern bietet mir von allem etwas.»</p>
+                </div>
+            </article>
+
+            <article>
+                <div>
+                    <h2>Mali</h2>
+                    <p>Creative Direktorin/ Designerin/ Webdesignerin</p>
+                    <p>«Meine Geldbörse und ich haben eine komplizierte Beziehung - insbesondere wenn es um den Kauf von Konzertkarten und Kinotickets geht.»</p>
+                </div>
+            </article>
+
+            <article>
+                <div>
+                    <h2>Sigi</h2>
+                    <p>Content-Verfasser/ Manager public relations</p>
+                    <p>«Für gutes Essen, ein frisch gezapftes Bier und fätzige Live-Musik würde ich Berge versetzen - dieses Gefühl anderen Menschen zu vermitteln, ist meine grösste Freude.»</p>
+                </div>
+            </article>
+
+            <article>
+                <div>
+                    <h2>Zoé</h2>
+                    <p>Gesamtmanagement/ Finanz Chef</p>
+                    <p>«Gemeinsam Spass haben, aufregende Erlebnisse teilen, Aktivitäten unternehmen und dabei meine Leidenschaft für Planung und Organisation ausleben.»</p>
+                </div>
+            </article>
+        </section>
+
+        <section>
+            <article>
+                <div>
+                    <p>Wir sind Zoé, Janic, Jazz, Mali und Sigi. Bei BÄRNLÄBT sind alle verschieden und doch irgendwie ähnlich. 
+                        Wir alle haben uns dazu entschieden, einen kuriosen Studiengang zu wählen, der irgendetwas mit Medien zu tun hat. Warum? Weil wir der digitalen Welt einen kreativen Anstrich geben und gesunde Kommunikation fördern möchten.</p>
+                </div>
+            </article>
+        </section>
+
+        <section>
+            <article>
+                <div>
+                    <h2>Werum säb Idee?</h2>
+                    <p>Unsere fünf Lebenswege haben sich   ausgerechnet in Bern gekreuzt, weil wir alle denselben Gedanken hatten: Warum nicht in die- ser aufregenden Stadt studieren? «Bärnfäggt!»
+ 
+                        Darum sind wir alle euphoriegeladen in die Schweizer Hauptstadt gepilgert. Haben Freunde, Familie und Vereine hinter uns gelassen. Schnell also stellten wir fest, wie es sich ohne das gewohnte Umfeld anfühlt; allein in einer neuen Stadt.</p>
+                </div>
+            </article>
+
+            <article>
+                <div>
+                    <p>Wie Du vielleicht schon bemerkt hast, ist es nicht mehr so einfach, neue Freunde kennenzulernen, wie es in Kinderjahren noch war. Und Du weisst sicherlich, dass es nicht halb so viel Spass macht, alleine an Kurse oder Veranstaltungen zu gehen. Dating-Plattformen sind für freundschaftliche Begegnungen nicht geeignet – da sind wir uns sicher einig. Aus diesem Grund gründeten wir unsere eigene Plattform, massgeschneidert für Bern und die Menschen, die hier wohnen.</p>
+                </div>
+            </article>
+        </section>
+
+        <section>
+            <article>
+                <div>
+                    <p>Unsere Vision ist es, die soziale Kultur in Bern zu stärken, in- dem wir Menschen zusammenführen und die Leidenschaft für gemeinsame Veranstaltungen entfachen. 
+
+                        Wieso?</p>
+                </div>
+            </article>
+
+            <article>
+                <div>
+                    <h2>Wöus zäme meh fäggt!</h2>
+                </div>
+            </article>
+        </section>
+
+        <section>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/hG9g4eGjbts?si=OhV_h_0a1QkQMNUw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </section>
+
+        <section>
+            <article>
+                <div>
+                    <p>Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein Feedback mitteilen? 
+
+                        Dann nutze gerne unser Kontaktformular und wir werden uns so schnell wie möglich bei dir melden.
+                        
+                        Wir schätzen dein Interesse an BÄRNLÄBT und freuen uns auf deine Kontaktaufnahme!</p>
+                </div>
+            </article>
         </section>
     </main>
+
+    <footer>
+        <section class="footerTextContainer" id="footerColumn1">
+            <p class="footerTitel">BÄRNLÄBT GmbH</p>
+            <p class="footerText">Holzikofenweg 8</p>
+            <p class="footerText">3000 Bern</p>
+            <p></p>
+            <p class="footerTitel">Kontakt</p>
+            <p class="footerText">info@baernlaebt.ch</p>
+            <p class="footerText">+41 31 333 31 01</p>
+
+        </section>
+
+        <section class="footerTextContainer" id="footerColumn2">
+            <p class="footerTitel">Öffnungszeiten</p>
+            <p class="footerText">Mo-Do:</p>
+            <p class="footerText">8:00 bis 11:45 Uhr</p>
+            <p class="footerText">13:00 bis 17:00 Uhr</p>
+            <p class="footerText">Fr: bis 16:00 Uhr</p>
+        </section>
+
+        <section class="footerTextContainer" id="footerColumn3">
+            <a href="home.html" class="footerText">Home</a>
+            <a href="angebot.html" class="footerText">Angebot</a>
+            <a href="über uns.html" class="footerText">Über uns</a>
+            <a href="kontakt.html" class="footerText">Kontakt</a>
+            <a href="impressum.html" class="footerText">Impressum</a>
+
+        </section>
+
+        <section class="footerSoMeContainer " id="footerColumn4">
+            <img src="../Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
+            <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
+            <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
+            <img src="../Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+
+        </section>
+
+    </footer>
+
 </body>
 
 </html>
