--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -13,28 +13,33 @@
 
 <body>
 
-        <header>
+    <header>
 
-            <section class="toolbar">
-                <div class="toolbarLeft">
+        <section class="toolbar">
+            <div class="toolbarLeft">
                 <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons"></div>
-                <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
-                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons"></div>
-            </section>
-
-            <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
-
-            <div class="menu-container">
-                <a href="home.html" class="button">Home</a>
-                <a href="angebot.html" class="button" id="buttonActive">Angebot</a>
-                <a href="ueberuns.html" class="button">Über uns</a>
-                <a href="kontakt.html" class="button">Kontakt</a>
+                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons">
             </div>
-        </header>
+            <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            </div>
+        </section>
+
+        <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
+
+        <div class="menu-container">
+            <a href="home.html" class="button">Home</a>
+            <a href="angebot.html" class="button" id="buttonActive">Angebot</a>
+            <a href="ueberuns.html" class="button">Über uns</a>
+            <a href="kontakt.html" class="button">Kontakt</a>
+        </div>
+
+    </header>
+    <main>
         <section class="sectionCalendar">
             <article class="datumswahl">
-                <p class="datumPfeile"> < </p>
+                <p class="datumPfeile">
+                    < </p>
                         <p class="datum">Heute</p>
                         <p class="datumPfeile">></p>
             </article>
@@ -63,40 +68,44 @@
         </section>
         <section class="sectionBeschreibung">
             <h3 id="schnöigge">chasch ruhig chli schnöigge</h3>
-            <article>
+            <article class="paragraph">
                 <p class="paragraphTitel">Entdecke unseren Kalender voller aktueller Events.</p>
                 <p class="paragraphText">An einem Interessiert? Ausgezeichnet!</p>
                 <p class="paragraphText">Wir helfen dir, die ideale Beglietung zu finden, damit du nicht alleine
                     losziehen must.</p>
             </article>
-            <div class="angebotLink">
-                <a href="impressum.html" id="zurKarte">zur Karte</a>
-                <a href="impressum.html" id="zumKalender">zum Kalender</a>
-            </div>
+    
+    <div class="angebotLink">
+        <a href="impressum.html" id="zurKarte">zur Karte</a>
+        <a href="impressum.html" id="zumKalender">zum Kalender</a>
+    </div>
+ 
+        <h3 id="weird">«Egau, wie weird du besch, do dosse gets no öpper wo genauso tickt.»</h3>
+        <article class="paragraph">
+            <p class="paragraphTitel">Möchtest du einen eigenen Event organisieren?</p>
+            <p class="paragraphText">Dann trage es einfach in deinen privaten Kalender ein und stelle die
+                Veranstaltung auf öffentlich.</p>
+            <p class="paragraphText">Zeige deinen Matches, was du als Gastgeber:in draufhast. </p>
+        </article>
+        <img src="../Images/Angebot/iPhone Beerpong.png"
+            alt="Bild mit zwei iPhones worauf gerade eine Beerpong Party abgemacht wird">
+        <h3 id="verein">«e Verein fäggt, imfau!»</h3>
+        <article class="paragraph">
+            <p class="paragraphTitel">Entdecke deinen Verein.</p>
+            <p class="paragraphText">Check auch unsere Liste mit Vereinen aus. Egal, ob du für etwas Neues brennst
+                oder einfach mal reinschnuppern willst: Hier wirst du fündig.</p>
+            <p class="paragraphText">Finde deine neue Lieblingsbeschäftigung und knüpfe Kontakte. Die nächste grosse
+                Leidenschaft wartet schon auf dich. </p>
 
-            <h3 id="weird">«Egau, wie weird du besch, do dosse gets no öpper wo genauso tickt.»</h3>
-            <article>
-                <p class="paragraphTitel">Möchtest du einen eigenen Event organisieren?</p>
-                <p class="paragraphText">Dann trage es einfach in deinen privaten Kalender ein und stelle die
-                    Veranstaltung auf öffentlich.</p>
-                <p class="paragraphText">Zeige deinen Matches, was du als Gastgeber:in draufhast. </p>
-            </article>
-            <img src="../Images/Angebot/iPhone Beerpong.png"
-                alt="Bild mit zwei iPhones worauf gerade eine Beerpong Party abgemacht wird">
-            <h3>«e Verein fäggt, imfau!»</h3>
-            <article>
-                <p class="paragraphTitel">Entdecke deinen Verein.</p>
-                <p class="paragraphText">Check auch unsere Liste mit Vereinen aus. Egal, ob du für etwas Neues brennst
-                    oder einfach mal reinschnuppern willst: Hier wirst du fündig.</p>
-                <p class="paragraphText">Finde deine neue Lieblingsbeschäftigung und knüpfe Kontakte. Die nächste grosse
-                    Leidenschaft wartet schon auf dich. </p>
 
+        </article>
+        <a href="home.html" class="button">alle Vereine</a>
 
-            </article>
-            <a href="home.html" class="button">alle Vereine</a>
-            <a class="button"> Impressum </a>
+        <img src="../Images/Home/15_Bild.png" alt="Symbolbild Basketball" class="roundImage">
+
+        <a class="button" id="impressum"> Impressum </a>
         </section>
-
+    </main>
 
 </body>
 
