continued on making ANgebot responsive. Major Problem is on Home.

--- a/html/home.html
+++ b/html/home.html
@@ -26,7 +26,7 @@
             <section class="menu-container">
                 <a href="home.html" class="button" id="buttonActive">Home</a>
                 <a href="angebot.html" class="button">Angebot</a>
-                <a href="über uns.html" class="button">Über uns</a>
+                <a href="ueberuns.html" class="button">Über uns</a>
                 <a href="kontakt.html" class="button">Kontakt</a>
             </section>
 
