Added portrait pictures of the team in html and tried hover effect in css.

--- a/html/ueberuns.html
+++ b/html/ueberuns.html
@@ -68,15 +68,21 @@
 
         <section>
             <article>
-                <div>
+                <div class="containerPortrait">
+                    <img src="../Images/ueberuns/Janic.png" alt="Portrait Janic">
+                    <div class="overlay">
+                        <div class="portraitText">
                     <h2>Janic</h2>
                     <p>Operations/ Kundendienst/ externe Kommunikation</p>
                     <p>«Excel und PowerPoint Fanboy aber sonst eigentlich ganz okay.»</p>
+                        </div>
+                    </div>
                 </div>
             </article>
 
             <article>
                 <div>
+                    <img src="../Images/ueberuns/Jazz.png" alt="Portrait Jazz">
                     <h2>Jazz</h2>
                     <p>Personalunternehmen/ Interne Kommunikation</p>
                     <p>«Ich wurde von zwei gegensätzlichen Kulturen geprägt: die australische Leidenschaft für Pubs und Vokuhilas; sowie die schweizerische Begeisterung für Struktur und Wandern. Bern bietet mir von allem etwas.»</p>
@@ -85,6 +91,7 @@
 
             <article>
                 <div>
+                    <img src="../Images/ueberuns/Mali.png" alt="Portrait Mali">
                     <h2>Mali</h2>
                     <p>Creative Direktorin/ Designerin/ Webdesignerin</p>
                     <p>«Meine Geldbörse und ich haben eine komplizierte Beziehung - insbesondere wenn es um den Kauf von Konzertkarten und Kinotickets geht.»</p>
@@ -93,6 +100,7 @@
 
             <article>
                 <div>
+                    <img src="../Images/ueberuns/Sigi.png" alt="Portrait Sigi">
                     <h2>Sigi</h2>
                     <p>Content-Verfasser/ Manager public relations</p>
                     <p>«Für gutes Essen, ein frisch gezapftes Bier und fätzige Live-Musik würde ich Berge versetzen - dieses Gefühl anderen Menschen zu vermitteln, ist meine grösste Freude.»</p>
@@ -101,6 +109,7 @@
 
             <article>
                 <div>
+                    <img src="../Images/ueberuns/Zoé.png" alt="Portrait Zoé">
                     <h2>Zoé</h2>
                     <p>Gesamtmanagement/ Finanz Chef</p>
                     <p>«Gemeinsam Spass haben, aufregende Erlebnisse teilen, Aktivitäten unternehmen und dabei meine Leidenschaft für Planung und Organisation ausleben.»</p>
